# zoneminder-dev

./: .gitignore
development/: README.md  docker-compose.yml  entrypoint.sh
development/ubuntu/xenial/: Dockerfile  Dockerfile.old
development/zoneminder/: .gitrepo
development/zoneminder/onvif/modules/: MYMETA.json
development/zoneminder/onvif/proxy/: MYMETA.yml
development/zoneminder/onvif/wsdl/: devicemgmt.wsdl  ptz.wsdl
development\zoneminder/onvif/wsdl/: onvif-local.xsd  onvif.xsd
test/ffmpeg/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
test/ffmpeg/php/: index.php
test/ffmpeg/php/controllers/: stream.php
test/ffmpeg/php/models/: video.php
test/ffmpeg/php/routes/: stream.php
test/ffmpeg/php/services/: response.php  stream.php
test/ffmpeg/src/: test_rtsp.cpp
test/ffmpeg/src/FFmpeg-Basic/0-TestEnvironment/: Makefile  main.cpp
test/ffmpeg/src/FFmpeg-Basic/1-VideoDecoding/: Makefile  VideoDecoding.cpp  VideoDecoding.h  main.cpp
test/ffmpeg/src/FFmpeg-Basic/2-VideoEncoding/: Makefile  VideoEncoding.cpp  main.cpp
test/ffmpeg/src/FFmpeg-Basic/3-AudioDecoding/: AudioDecoding.cpp  Makefile  main.cpp
test/ffmpeg/src/FFmpeg-Basic/4-AudioEncoding/: AudioEncoding.cpp  Makefile  main.cpp
test/ffmpeg/src/FFmpeg-Basic/5-Remuxing/: Makefile  Remuxing.cpp  main.cpp
test/ffmpeg/src/FFmpeg-Basic/6-Tanscoding/: Makefile  Transcoding.cpp  Transcoding.h  main.cpp
test/ffmpeg/src/FFmpeg-Test/: Makefile  Transcoding.cpp  main  main.cpp  stream-file.cpp  stream-frame.cpp  test  zms-test.cpp
test/zm_cpp/: Dockerfile  docker-compose.yml  entrypoint.sh
test/zm_cpp/src/: CMakeLists.txt  zm_db.cpp  zm_db.h  zm_monitor.cpp  zm_monitor.h  zm_utils.cpp  zmc.cpp
